// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList runTask will run a task by taskName 1`] = `
Array [
  Object {
    "message": Object {
      "text": "hi",
    },
    "properties": Object {
      "category": "bar",
      "group": "group1",
      "taskDisplayName": "Insights Task High",
    },
    "ruleId": "insights-task-high",
  },
]
`;

exports[`TaskList runTasks will run all registered tasks 1`] = `
Object {
  "message": Object {
    "text": "hi",
  },
  "properties": Object {
    "category": "foo",
    "group": "group2",
    "taskDisplayName": "Insights Task Low",
  },
  "ruleId": "insights-task-low",
}
`;

exports[`TaskList runTasks will run all registered tasks 2`] = `
Object {
  "message": Object {
    "text": "hi",
  },
  "properties": Object {
    "category": "bar",
    "group": "group1",
    "taskDisplayName": "Insights Task High",
  },
  "ruleId": "insights-task-high",
}
`;
